@@ -1,0 +1,19 @@
+<?xml version="1.0" encoding="UTF-8"?>
+<test-data>
+  <test-code>
+    <description>basic /sdcard test</description>
+    <expected-problems>1</expected-problems>
+    <code><![CDATA[
+public class MyActivity extends Activity {
+  protected void bad() {
+    String storageLocation = "/sdcard/mypackage";
+  }
+
+  protected void good() {
+    String storageLocation = Environment.getExternalStorageDirectory() + "/mypackage";
+  }
+}
+    ]]></code>
+  </test-code>
+
+</test-data>
