@@ -169,5 +169,28 @@ To get better results, make sure that the auxclasspath is defined for type resol
     </example>
   </rule>
 
+  <rule name="DoNotHardCodeSDCard" since="4.2.6"
+      message="Do not hardcode /sdcard."
+      class="net.sourceforge.pmd.rules.XPathRule"
+      externalInfoUrl="http://pmd.sourceforge.net/rules/android.html#DoNotHardCodeSDCard">
+    <description>Use Environment.getExternalStorageDirectory() instead of "/sdcard"</description>
+    <priority>3</priority>
+    <properties>
+      <property name="xpath">
+        <value>//Literal[starts-with(@Image,'"/sdcard')]</value>
+      </property>
+    </properties>
+    <example>
+      <![CDATA[
+public class MyActivity extends Activity {
+  protected void foo() {
+    String storageLocation = "/sdcard/mypackage"; // BAD
+
+    storageLocation = Environment.getExternalStorageDirectory() + "/mypackage"; // GOOD
+  }
+}
+]]>
+    </example>
+  </rule>
 </ruleset>
 
